# mssgnr

./: CMakeLists.txt  README.md  build.gradle
android/app/src/main/java/com/hxx0r/: MainActivity.java
kiikiii/: local.properties  settings.gradle.kts
kiikiii/app/: build.gradle.kts
kiikiii/app/src/androidTest/java/com/quark/kiikiii/: ExampleInstrumentedTest.kt
kiikiii/app/src/main/: AndroidManifest.xml
kiikiii/app/src/main/java/com/quark/kiikiii/: MainActivity.kt
kiikiii/app/src/main/res/layout/: activity_main.xml
kiikiii/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
kiikiii/app/src/main/res/values-night/: themes.xml
kiikiii/app/src/test/java/com/quark/kiikiii/: ExampleUnitTest.kt
kiikiii/gradle/wrapper/: gradle-wrapper.properties
protocol/: generate.sh  messages.proto
server/: CmakeLists.txt
server/src/: main.cpp
server/src/core/: main.cpp
server/src/network/: session.cpp  session.h
